# mcp_unhcr

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  smithery.yaml
src/my_server/: __init__.py  server.py  server.py.backup  server.py.old2
src/unhcr_mcp/: api_client.py  server.py
