[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unhcr-mcp"
version = "0.1.0"
description = "UNHCR Refugee Statistics MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
    "requests",
    "smithery",
]

[project.scripts]
unhcr-mcp = "unhcr_mcp.server:main"
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unhcr_mcp"]

[tool.smithery]
server = "unhcr_mcp.server:create_server"
